<resources>
    <string name="app_name">MOROA3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="hjem">hjem</string>
    <string name="lige_nu">lige nu</string>
    <string name="gemte_events">Gemte events</string>
    <string name="menu">menu</string>
    <string name="find_event">Find event</string>
    <string name="tab_where">HVOR</string>
    <string name="tab_when">HVORNÅR</string>
    <string name="tab_what">HVAD</string>
    <string name="om_os">OM OS</string>
    <string name="om_os_maintext">MORO er en ny kultur-platform for unge, der ønsker et skræddersyet overblik over oplevelser i det københavnske kulturliv. \n \n Vores team består af 8 unge iværksættere, der tilsammen udgør MORO. Vi var trætte af altid at skulle lede gennem utallige sites og hjemmesider for at finde og udforske de events, der interesserer os. Vi oplevede, at vi tit gik glip af events, fordi vi ikke vidste, hvornår de blev afholdt, eller fordi vi først fik kendskab til dem, efter de var blevet afholdt. Vi savnede overblik og en platform, hvor man nemt og på overskuelig vis, kunne filtrere sin søgning og få optimeret information om lige præcis de events, vi gerne ville deltage i. Vi har derfor startet MORO.</string>
    <string name="kontakt_os">KONTAKT OS</string>
    <string name="choose_Date">Vælg</string> <!--  TODO skal ændres -->
    <string name="tip_os">TIP OS</string>
    <string name="titel_p_event">Titel på event</string>
    <string name="hvor">Hvor</string>
    <string name="beskrivelse">Beskrivelse</string>
    <string name="v_lg_dato">Vælg dato</string>
    <string name="kontaktoplysninger">Kontaktoplysninger</string>
    <string name="link_til_event">Link til event</string>
    <string name="send">Send</string>
    <string name="mad_og_drikke">Mad og drikke</string>
    <string name="sport_og_spil">Sport og spil</string>
    <string name="mode">Mode</string>
    <string name="fest">Fest</string>
    <string name="teater"><![CDATA[Teater & \n forestill- \n inger]]></string>
    <string name="gratis">Gratis</string>
    <string name="comedy">Comedy</string>
    <string name="talk">Talk</string>
    <string name="film">Film</string>
    <string name="koncert">Koncert</string>
    <string name="udstilling_og_kunst"><![CDATA[Udstilling \n og kunst]]></string>
    <string name="litteratur">Litteratur</string>
    <string name="Stemning">Stemning</string>
    <string name="TYPE">Type</string>
    <string name="loading">Loader...</string>
    <string name="Du_ikke_vil_hjem_men_videre"><![CDATA[Du ikke \n vil hjem, men \n videre]]></string>
    <string name="Du_vil_ud_i_det_blå"><![CDATA[Du vil ud i \n det blå]]></string>
    <string name="Du_har_tømmermænd"><![CDATA[Du har tømmer- \n mænd]]></string>
    <string name="Du_vil_udvide_din_horisont"><![CDATA[Du vil \n udvide din \n horisont]]></string>
    <string name="Du_har_tomme_lommer"><![CDATA[Du har \n tomme \n lommer]]></string>
    <string name="Mad_gør_dig_glad"><![CDATA[Mad gør \n dig glad]]></string>
    <string name="Du_vil_forkæle_dig_selv"><![CDATA[Du vil \n forkæle \n dig selv]]></string>
    <string name="Du_vil_imponere_din_date"><![CDATA[Du vil \n imponere \n din date]]></string>
    <string name="De_gamle_kommer_på_besøg"><![CDATA[De gamle \n kommer \n på besøg]]></string>
    <string name="Du_vil_have_gang_i_kroppen"><![CDATA[Du vil \n have gang \n i kroppen]]></string>
    <string name="temp">Temp</string>
    <string name="Nørrebro">Nørrebro</string>
    <string name="Islands_brygge">Islands brygge</string>
    <string name="Indre_by">Indre by</string>
    <string name="Østerbro">Østerbro</string>
    <string name="Nordvest">Nordvest</string>
    <string name="Valby">Valby</string>
    <string name="Brønshøj_og_Husum"><![CDATA[Brønshøj & Husum]]></string>
    <string name="Amager">Amager</string>
    <string name="Vesterbro">Vesterbro</string>
    <string name="Vanløse">Vanløse</string>
    <string name="Christianshavn">Christians- havn</string>
    <string name="Refshaleøen">Refshale- øen</string>

    <!--
    TODO Skal muligvis bare slettes afhænig af hvad MORO gerne vil have af valg af dato metode
    <string-array name="month">
        <item>Januar</item>
        <item>Februar</item>
        <item>Marts</item>
        <item>April</item>
        <item>Maj</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="date">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="year">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
-->
    <!--  TODO skal ændres -->
</resources>