<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_category_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moroYellowBackground"
    tools:context=".CategoryTabFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/category11_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/mad_og_drikke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/category12_textView"
        app:layout_constraintStart_toEndOf="@+id/category10_textView"
        app:layout_constraintTop_toBottomOf="@+id/category8_textView" />

    <TextView
        android:id="@+id/category10_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/sport_og_spil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/category11_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category7_textView" />

    <TextView
        android:id="@+id/category12_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category11_textView"
        app:layout_constraintTop_toBottomOf="@+id/category9_textView" />

    <TextView
        android:id="@+id/category8_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="41dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/fest"
        app:layout_constraintBottom_toTopOf="@+id/category11_textView"
        app:layout_constraintEnd_toStartOf="@+id/category9_textView"
        app:layout_constraintStart_toEndOf="@+id/category7_textView"
        app:layout_constraintTop_toBottomOf="@+id/category5_textView" />

    <TextView
        android:id="@+id/category7_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="41dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/teater"
        app:layout_constraintBottom_toTopOf="@+id/category10_textView"
        app:layout_constraintEnd_toStartOf="@+id/category8_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category4_textView" />

    <TextView
        android:id="@+id/category9_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="41dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/gratis"
        app:layout_constraintBottom_toTopOf="@+id/category12_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category8_textView"
        app:layout_constraintTop_toBottomOf="@+id/category6_textView" />

    <TextView
        android:id="@+id/category5_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/comedy"
        app:layout_constraintBottom_toTopOf="@+id/category8_textView"
        app:layout_constraintEnd_toStartOf="@+id/category6_textView"
        app:layout_constraintStart_toEndOf="@+id/category4_textView"
        app:layout_constraintTop_toBottomOf="@+id/category2_textView" />

    <TextView
        android:id="@+id/category6_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/talk"
        app:layout_constraintBottom_toTopOf="@+id/category9_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category5_textView"
        app:layout_constraintTop_toBottomOf="@+id/category3_textView" />

    <TextView
        android:id="@+id/category4_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/film"
        app:layout_constraintBottom_toTopOf="@+id/category7_textView"
        app:layout_constraintEnd_toStartOf="@+id/category5_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1_textView" />

    <TextView
        android:id="@+id/category1_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/koncert"
        app:layout_constraintBottom_toTopOf="@+id/category4_textView"
        app:layout_constraintEnd_toStartOf="@+id/category2_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category2_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/udstilling_og_kunst"
        app:layout_constraintBottom_toTopOf="@+id/category5_textView"
        app:layout_constraintEnd_toStartOf="@+id/category3_textView"
        app:layout_constraintStart_toEndOf="@+id/category1_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category3_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:background="@drawable/blackborder"
        android:text="@string/litteratur"
        app:layout_constraintBottom_toTopOf="@+id/category6_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category2_textView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>