<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/koncert"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/udstilling_og_kunst"
            android:textColor="#000000"
            android:textSize="21sp"

            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/litteratur"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/film"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/comedy"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/talk"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/teater"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/fest"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/gratis"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/sport_og_spil"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/mad_og_drikke"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/mode"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
