<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3b9d6"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Nørrebro"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Islands_brygge"
            android:textColor="#000000"
            android:textSize="21sp"

            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Indre_by"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Østerbro"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Nordvest"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Valby"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Brønshøj_og_Husum"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Amager"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Vesterbro"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Vanløse"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Christianshavn"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/blackborder"
            android:gravity="center"
            android:tag="red"
            android:text="@string/Refshaleøen"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
